--- a/asset/css/template.css
+++ b/asset/css/template.css
@@ -9,6 +9,7 @@ body {
   margin: 0;
 }
 
+/* header content */
 header {
   height: auto;
   background-color: #fafcff;
@@ -72,8 +73,36 @@ header nav {
 .container-body .content {
   margin: 20px 20px 0 0;
 }
+/* end header content */
 
-.container-body .content-menu {
+/* footer content */
+footer {
+  height: 68px;
+  width: auto;
+  background-color: #6379f4;
+}
+
+footer nav {
+  height: 68px;
+  padding: 0 40px auto;
+}
+footer .copyright {
+  font-family: "Nunito Sans";
+  font-weight: 400;
+  font-style: normal;
+  color: #efefef;
+}
+
+footer .contact {
+  font-family: "Nunito Sans";
+  font-weight: 600;
+  font-style: normal;
+  color: #efefef;
+}
+/* end footer content */
+
+/* content Dashboard */
+/* .container-body .content-menu {
   height: 30%;
   margin-bottom: 20px;
   background-color: #6379f4;
@@ -163,28 +192,5 @@ header nav {
   font-style: normal;
   padding-right: 0;
   padding-left: 10px;
-}
-
-footer {
-  height: 68px;
-  width: auto;
-  background-color: #6379f4;
-}
-
-footer nav {
-  height: 68px;
-  padding: 0 40px auto;
-}
-footer .copyright {
-  font-family: "Nunito Sans";
-  font-weight: 400;
-  font-style: normal;
-  color: #efefef;
-}
-
-footer .contact {
-  font-family: "Nunito Sans";
-  font-weight: 600;
-  font-style: normal;
-  color: #efefef;
-}
+} */
+/* end content Dashboard */
