--- a/asset/css/search.css
+++ b/asset/css/search.css
@@ -1,196 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap");
-
-body {
-  height: auto;
-  width: 1100px;
+.input-container {
+  display: flex;
+  align-items: center;
+  height: 50px;
+  background-color: rgba(58, 61, 66, 0.1);
+  border-radius: 14px;
+  padding: 0 20px;
 }
 
-.container {
-  margin: 0;
+.input-search {
+  border: none;
+  outline: none;
+  background-color: transparent;
+  width: 100%;
 }
-
-/* header content */
-header {
-  height: auto;
-  background-color: #fafcff;
-  overflow: hidden;
-}
-header nav {
-  background-color: #ffff;
-  margin-bottom: 5px;
-  border-bottom-right-radius: 25px;
-  border-bottom-left-radius: 25px;
-  border: 2px solid white;
-  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
-  padding: 0 40px auto;
-}
-.logo {
-  margin-left: 20px;
-  font-family: "Nunito Sans";
-  font-weight: 700;
-  font-size: 29px;
-  color: #6379f4;
-}
-.nama {
-  font-family: "Nunito Sans";
-  font-size: 18px;
-  font-weight: 700;
-  font-style: normal;
-  text-align: center;
-}
-.nama-2 {
-  font-family: "Nunito Sans";
-  font-weight: 400;
-  font-style: normal;
-}
-
-.container-body {
-  height: 753px;
-  background-color: #fafcff;
-}
-.container-body .bar {
-  margin: 20px 20px 0 20px;
-  width: 30%;
-  background-color: #ffff;
-  border-radius: 25px;
-  border: 2px solid white;
-  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
-}
-
-.bar-menu {
-  margin: 10px 0 auto;
-}
-
-.navbar-menu {
-  text-decoration: none;
-  font-family: "Nunito Sans";
-  font-weight: 700;
-  font-style: normal;
-  font-size: 18px;
-  color: #6379f4;
-}
-
-.container-body .content {
-  margin: 20px 20px 0 0;
-}
-/* end header content */
-
-/* footer content */
-footer {
-  height: 68px;
-  width: auto;
-  background-color: #6379f4;
-}
-
-footer nav {
-  height: 68px;
-  padding: 0 40px auto;
-}
-footer .copyright {
-  font-family: "Nunito Sans";
-  font-weight: 400;
-  font-style: normal;
-  color: #efefef;
-}
-
-footer .contact {
-  font-family: "Nunito Sans";
-  font-weight: 600;
-  font-style: normal;
-  color: #efefef;
-}
-/* end footer content */
-
-/* content Dashboard */
-/* .container-body .content-menu {
-  height: 30%;
-  margin-bottom: 20px;
-  background-color: #6379f4;
-  border-radius: 25px;
-  border: 2px solid white;
-  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
-}
-
-.link-content {
-  width: 120px;
-}
-
-.balance {
-  font-family: "Nunito Sans";
-  font-weight: 400;
-  font-style: normal;
-  font-size: 18px;
-  color: #efefef;
-}
-
-.nope {
-  font-family: "Nunito Sans";
-  font-weight: 600;
-  font-style: normal;
-  font-size: 14px;
-  color: #efefef;
-}
-
-.rupiah {
-  font-family: "Nunito Sans";
-  font-weight: 700;
-  font-style: normal;
-  font-size: 40px;
-  color: #efefef;
-}
-
-.container-body .graph-menu {
-  height: 100%;
-}
-
-.graph-menu .item-1 {
-  width: 60%;
-  margin: 10px;
-  background-color: #6379f4;
-
-  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
-  border-radius: 25px;
-}
-
-.graph-menu .item-2 {
-  width: 45%;
-  margin: 10px;
-  background-color: #ffff;
-  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
-  border-radius: 25px;
-}
-.item-2 .item-content {
-  margin: 30px 10px 40px 10px;
-  font-family: "Nunito Sans";
-}
-
-.item-content .item-content-title {
-  font-weight: 700;
-  font-style: normal;
-  font-size: 17px;
-  color: #3a3d42;
-}
-
-.item-content .trans {
-  text-align: right;
-  font-size: 12px;
-  font-weight: 700;
-  font-style: normal;
-  padding: 0;
-}
-
-.item-content-name {
-  font-size: 14px;
-  font-weight: 700;
-  font-style: normal;
-  padding-right: 0;
-  padding-left: 10px;
-}
-.item-content-status {
-  font-size: 13px;
-  font-weight: 400;
-  font-style: normal;
-  padding-right: 0;
-  padding-left: 10px;
-} */
-/* end content Dashboard */
