--- a/asset/css/search.css
+++ b/asset/css/search.css
@@ -1,3 +1,20 @@
+.bg-outline-white {
+  border: 2px solid white;
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.navigation > ul li.active a {
+  color: blue;
+}
+.navigation > ul li.active::before {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 40px;
+  background: blue;
+  left: 14px;
+}
+
 .input-container {
   display: flex;
   align-items: center;
