--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -1,14 +1,3 @@
-/* body {
-  width: 1440px;
-  height: 916px;
-} */
-
 .fiture {
-  background-image: url("./asset/login/bg-img2.png");
-  height: 100vh;
-  width: 100vw;
-}
-
-.img-content {
-  width: 400px;
+  background-image: url("/asset/login/bg-img2.png");
 }
