--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -1,3 +1,16 @@
 .fiture {
   background-image: url("/asset/login/bg-img2.png");
 }
+
+.input-login {
+  border: none;
+  border-bottom: 1px solid rgba(169, 169, 169, 0.6);
+}
+.input-login-value {
+  border: none;
+  outline: none;
+}
+
+.btn-login {
+  background-color: #dadada;
+}
