--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -12,6 +12,11 @@
   font-family: "Nunito Sans";
 }
 
+.text-nuni-lg {
+  font-family: "Nunito Sans";
+  font-size: 20px;
+}
+
 .txt-bold {
   font-weight: 700 !important;
 }
